<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="generate_content" translatable="false">BSA Weather App</string>
    <string name="condition" translatable="false">%s</string>
    <string name="dateAndTime" translatable="false">%s</string>
    <string name="temperature">Temperature:\t%s</string>
    <string name="pressure">Pressure:\t%s</string>
    <string name="humidity">Humidity:\t%s</string>
    <string name="cloudCover">Cloud cover:\t%s</string>
    <string name="windSpeed">Wind speed:\t%s</string>
    <string name="windDirection">Wind Direction:\t%s</string>
    <string name="rain">Rain (last 3h):\t%s</string>
    <string name="snow">Snow (last 3h):\t%s</string>
    <string name="noRain">No Rain</string>
    <string name="noSnow">No Snow</string>
    <string name="forecast">Forecast for</string>
    <string name="kph">kph</string>
</resources>